fix: suppress modern java warnings for ktor execution tasks
Applies JVM arguments to JavaExec tasks to prevent native access and unsafe memory warnings from Jansi and deprecated APIs on recent JDKs.